--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -213,6 +213,7 @@
 
   .description p,
   .description div {
+    margin-top: 5rem;
     display: flex;
     justify-content: center;
     position: fixed;
